[gd_scene load_steps=23 format=2]

[ext_resource path="res://Scripts/MouseFollower.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Art/Panic_yeet.png" type="Texture" id=3]
[ext_resource path="res://Art/Panic_idle.png" type="Texture" id=4]
[ext_resource path="res://Art/Panic_move.png" type="Texture" id=5]
[ext_resource path="res://Art/Panic_balance.png" type="Texture" id=6]

[sub_resource type="CircleShape2D" id=17]
radius = 31.1006

[sub_resource type="CircleShape2D" id=18]
radius = 1.0

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 180, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 180, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 360, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 180, 180, 180 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 180, 180, 180, 180 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 180, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 180, 180, 180 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 180, 180, 180, 180 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 180, 0, 180, 180 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "Balance",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "Yeet",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "Idle",
"speed": 2.0
} ]

[node name="Player" type="Area2D"]
script = ExtResource( 2 )
MAX_SPEED = 300

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 17 )

[node name="Node" type="Node" parent="."]

[node name="MouseFollower" type="Area2D" parent="Node"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node/MouseFollower"]
shape = SubResource( 18 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.707092, 0 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 16 )
animation = "Balance"
frame = 1
playing = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="body_entered" from="Node/MouseFollower" to="." method="_on_MouseFollower_body_entered"]
[connection signal="body_entered" from="Node/MouseFollower" to="Node/MouseFollower" method="_on_MouseFollower_body_entered"]
[connection signal="body_exited" from="Node/MouseFollower" to="." method="_on_MouseFollower_body_exited"]
